# GestionNote

./: CMakeLists.txt  README.md
GestionNote/: CMakeLists.txt  aide.txt
GestionNote/app/: GestionNoteCompletion.cpp  GestionNoteCompletion.sh  main.cpp  sample.cpp
GestionNote/include/: examples1.hpp  examples2.hpp  matiere.hpp  profs.hpp  sample.hpp  structure_cours.hpp  student.hpp  util.hpp
GestionNote/src/: Invoice.cpp  examples1.cpp  examples2.cpp  matiere.cpp  profs.cpp  sample.cpp  structure_cours.cpp  student.cpp  util.cpp
ods/: Attrs.cpp  Attrs.hpp  Book.cpp  Book.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CurrencyInfo.hpp  DateInfo.cpp  DateInfo.hpp  Duration.cpp  Duration.hpp  DurationInfo.cpp  DurationInfo.hpp  Formula.cpp  Formula.hpp  Row.cpp  Style.cpp  Style.hpp  Tag.cpp  Tag.hpp  Value.cpp  Value.hpp  decl.hxx  err.hpp  i18n.hxx  ns.hxx  ods  ods.cc  ods.hxx  tag.cc
ods/style/: Currency.hpp  Date.cpp  Date.hpp  Duration.cpp  Duration.hpp  decl.hxx  style.hxx  tag.cc  tag.hh
quazip/: CMakeLists.txt
zlib/: CMakeLists.txt  gzread.c  gzwrite.c
